# infrastructure/utils/NodeMailer.js
@@ -1,0 +1,36 @@
+const nodemailer = require("nodemailer");
+
+const sendEmail = async (email, subject, text) => {
+    try {
+        const transporter = nodemailer.createTransport({
+            service: process.env.SERVICE,
+            auth: {
+                user: process.env.USER,
+                pass: process.env.PASS,
+            },
+        });
+
+        await transporter.sendMail({
+            from: process.env.USER,
+            to: email,
+            subject: subject,
+            text: `Hello,
+
+            Follow this link to reset your Ubademy password for your  ${email} account.
+            
+            ${text}
+            
+            If you didn’t ask to reset your password, you can ignore this email.
+            
+            Thanks,
+            
+            Your Ubademy team`,
+        });
+
+        console.log("email sent sucessfully");
+    } catch (error) {
+        console.log(error, "email not sent");
+    }
+};
+
+module.exports = sendEmail;
